# GFun

./: .gitignore  FIXES.md  README.md  package-lock.json  package.json
.gfun-data/: assemblies.json  models.json  operations.json
.gfun-data/models/: mdl-ee79b3745933.step
3D Models/: GFF-000-STP.step  GFF-000B-STP.step  GFF-000Y-STP.step  GFF-001-STP.step  GFF-003-STP.step  GFJ-000G-STP.step  GFJ-238-STP.STEP  GFJ-256G-STP.step  GFJ-A04-STP.step  GFJ-A11B-STP.step  GFJ-A15A-STP.step  GFJ-A15G-STP.step  GFJ-A22.step  GFJ-B28-STP.STEP  GFJ-C44-STP.step  GFJ-C98-STP.step  GFJ-C98B-STP.step  GFJ-D01-STP.step  GFJ-D17-STP.step  GFJ-D26-STP.step  GFJ-D28-STP.step  GFJ-D37-STP.step  GFJ-D43-STP.step  GFJ-D45-STP.step  GFJ-D99-STP.step  GFJ-E52-STP.step  GFJ-E53-STP.step  GFJ-F53-STP.step  GFJ-F54-STP.step  GFJ-F55-STP.step  GFJ-F56-STP.step  GFN-541-STP.step  GFN-628-STP.step  GFN-666-STP.step  GFN-E01-STP.step  GFN-E02-STP.step
apps/desktop/: package.json  tsconfig.json
apps/desktop/src/: main.ts  preload.ts
apps/desktop/src/renderer/: index.html  renderer.js
apps/web/public/: app.js  index.html
docs/: IMPLEMENTATION_PLAN.md
services/cad-api/: pyproject.toml
services/cad-api/src/cad_api/: main.py  models.py  storage.py
services/cad-api/src/gfun_cad_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
