[project]
name = "gfun-cad-api"
version = "0.1.0"
description = "CAD orchestration API for GFun"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "python-multipart>=0.0.20",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.7"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
